--- a/KJ/ViewControllers/MedicalVisitTableViewCell.xib
+++ b/KJ/ViewControllers/MedicalVisitTableViewCell.xib
@@ -36,7 +36,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ZL-ny-C48">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ZL-ny-C48">
                         <rect key="frame" x="105" y="34" width="200" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="7bi-2Q-1U7"/>
