--- a/KJ/ViewControllers/FollowDetailTableViewCell.xib
+++ b/KJ/ViewControllers/FollowDetailTableViewCell.xib
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FollowDetailCell" id="KGk-i7-Jjw" customClass="FollowDetailTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="73"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="101.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FZr-HH-cV9">
+                        <rect key="frame" x="174" y="26" width="62" height="49"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="45" id="kR1-BN-J5V"/>
-                            <constraint firstAttribute="width" constant="45" id="lHK-T5-8LO"/>
+                            <constraint firstAttribute="width" constant="62" id="F65-M4-wYd"/>
+                            <constraint firstAttribute="height" constant="49" id="toN-rr-jMl"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eED-l1-rk1">
+                        <rect key="frame" x="245" y="0.0" width="75" height="101.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="22" id="4Zd-Gi-nOJ"/>
-                            <constraint firstAttribute="width" constant="22" id="Izj-y2-uGN"/>
+                            <constraint firstAttribute="width" constant="75" id="Fmb-UL-kYQ"/>
                         </constraints>
                         <connections>
-                            <action selector="actionCall:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="uW7-xY-Gvb"/>
+                            <action selector="actionCall:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="q8K-4P-gDC"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TqT-tf-myV" userLabel="num">
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uY4-u6-7X7" userLabel="time">
+                        <rect key="frame" x="95" y="55" width="79" height="12"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="12" id="c5B-t0-VNB"/>
                         </constraints>
@@ -43,15 +43,20 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="w.png" translatesAutoresizingMaskIntoConstraints="NO" id="SCZ-Td-P6t">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQZ-Zy-alh">
+                        <rect key="frame" x="28" y="21" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="12" id="rHh-dZ-JsR"/>
-                            <constraint firstAttribute="height" constant="12" id="sHV-mg-uat"/>
+                            <constraint firstAttribute="width" constant="60" id="TNq-nG-dWv"/>
+                            <constraint firstAttribute="height" constant="60" id="izU-eo-CF7"/>
                         </constraints>
-                    </imageView>
+                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKn-lO-Gfo" userLabel="name">
+                        <rect key="frame" x="95" y="28" width="79" height="19"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="16" id="p9V-xg-Nes"/>
+                            <constraint firstAttribute="height" constant="19" id="g0T-VJ-3Kp"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
@@ -59,31 +64,28 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-14" id="5LG-78-5g9"/>
-                    <constraint firstItem="SCZ-Td-P6t" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="12" id="6B7-gY-Xkk"/>
-                    <constraint firstAttribute="trailing" secondItem="eED-l1-rk1" secondAttribute="trailing" constant="15" id="Oxg-NS-IRR"/>
-                    <constraint firstItem="FZr-HH-cV9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Pji-du-ijl"/>
-                    <constraint firstItem="eED-l1-rk1" firstAttribute="trailing" secondItem="TqT-tf-myV" secondAttribute="trailing" id="Sgf-Fe-OQU"/>
-                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Vq7-Ur-Wfu"/>
-                    <constraint firstItem="SCZ-Td-P6t" firstAttribute="bottom" secondItem="uY4-u6-7X7" secondAttribute="bottom" id="Xmf-15-3XY"/>
-                    <constraint firstItem="eED-l1-rk1" firstAttribute="centerY" secondItem="gKn-lO-Gfo" secondAttribute="centerY" id="g6j-lK-JBk"/>
-                    <constraint firstItem="uY4-u6-7X7" firstAttribute="top" secondItem="TqT-tf-myV" secondAttribute="top" id="laL-0i-gcR"/>
-                    <constraint firstItem="uY4-u6-7X7" firstAttribute="leading" secondItem="SCZ-Td-P6t" secondAttribute="trailing" constant="5" id="mLX-O9-hhM"/>
-                    <constraint firstItem="SCZ-Td-P6t" firstAttribute="leading" secondItem="gKn-lO-Gfo" secondAttribute="leading" id="r0u-Xh-X9u"/>
-                    <constraint firstItem="FZr-HH-cV9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ugr-84-Aw1"/>
-                    <constraint firstItem="uY4-u6-7X7" firstAttribute="bottom" secondItem="TqT-tf-myV" secondAttribute="bottom" id="zoT-jO-Y7R"/>
+                    <constraint firstItem="BQZ-Zy-alh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2N8-iP-7sn"/>
+                    <constraint firstItem="FZr-HH-cV9" firstAttribute="leading" secondItem="gKn-lO-Gfo" secondAttribute="trailing" id="9lb-Ox-RYx"/>
+                    <constraint firstItem="BQZ-Zy-alh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="GAP-KW-fWM"/>
+                    <constraint firstAttribute="bottom" secondItem="eED-l1-rk1" secondAttribute="bottom" id="H01-v3-EVd"/>
+                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="leading" secondItem="uY4-u6-7X7" secondAttribute="leading" id="H7w-Jg-Fa4"/>
+                    <constraint firstAttribute="trailing" secondItem="eED-l1-rk1" secondAttribute="trailing" id="HEU-et-YaL"/>
+                    <constraint firstItem="eED-l1-rk1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Isw-su-oBK"/>
+                    <constraint firstItem="FZr-HH-cV9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Pm5-jZ-MYw"/>
+                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="28" id="gDj-o3-UZV"/>
+                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="trailing" secondItem="uY4-u6-7X7" secondAttribute="trailing" id="okF-r4-sCr"/>
+                    <constraint firstItem="eED-l1-rk1" firstAttribute="leading" secondItem="FZr-HH-cV9" secondAttribute="trailing" constant="9" id="t0M-QC-HfX"/>
+                    <constraint firstItem="gKn-lO-Gfo" firstAttribute="leading" secondItem="BQZ-Zy-alh" secondAttribute="trailing" constant="7" id="t2D-E5-GYe"/>
+                    <constraint firstItem="uY4-u6-7X7" firstAttribute="top" secondItem="gKn-lO-Gfo" secondAttribute="bottom" constant="8" id="zxX-w2-94W"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="btnCall" destination="eED-l1-rk1" id="6rA-il-GWe"/>
-                <outlet property="imgState" destination="FZr-HH-cV9" id="BiI-B1-lqL"/>
-                <outlet property="lblName" destination="gKn-lO-Gfo" id="wQU-qg-Vvf"/>
-                <outlet property="lblNum" destination="TqT-tf-myV" id="4NN-CV-ccu"/>
-                <outlet property="lblTime" destination="uY4-u6-7X7" id="d2G-Qo-w36"/>
+                <outlet property="btnCall" destination="eED-l1-rk1" id="NNp-ju-nUv"/>
+                <outlet property="imgState" destination="FZr-HH-cV9" id="Imd-4M-Np8"/>
+                <outlet property="lblName" destination="gKn-lO-Gfo" id="TZa-eH-TAY"/>
+                <outlet property="lblTime" destination="uY4-u6-7X7" id="Vqn-1k-cqO"/>
+                <outlet property="lblType" destination="BQZ-Zy-alh" id="PZb-ec-ktV"/>
             </connections>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="w.png" width="24" height="24"/>
-    </resources>
 </document>
