--- a/KJ/ViewControllers/FollowDetailTableViewCell.xib
+++ b/KJ/ViewControllers/FollowDetailTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FollowDetailCell" id="KGk-i7-Jjw" customClass="FollowDetailTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FollowDetailCell" rowHeight="102" id="KGk-i7-Jjw" customClass="FollowDetailTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -72,6 +72,7 @@
                     <constraint firstAttribute="trailing" secondItem="eED-l1-rk1" secondAttribute="trailing" id="HEU-et-YaL"/>
                     <constraint firstItem="eED-l1-rk1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Isw-su-oBK"/>
                     <constraint firstItem="FZr-HH-cV9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Pm5-jZ-MYw"/>
+                    <constraint firstItem="BQZ-Zy-alh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Pxl-Pl-5qj"/>
                     <constraint firstItem="gKn-lO-Gfo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="28" id="gDj-o3-UZV"/>
                     <constraint firstItem="gKn-lO-Gfo" firstAttribute="trailing" secondItem="uY4-u6-7X7" secondAttribute="trailing" id="okF-r4-sCr"/>
                     <constraint firstItem="eED-l1-rk1" firstAttribute="leading" secondItem="FZr-HH-cV9" secondAttribute="trailing" constant="9" id="t0M-QC-HfX"/>
