--- a/KJ/ViewControllers/PictureTableViewCell.xib
+++ b/KJ/ViewControllers/PictureTableViewCell.xib
@@ -15,10 +15,10 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="126.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="影像资料(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tGv-rp-4Yu">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tGv-rp-4Yu">
                         <rect key="frame" x="15" y="12" width="150" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="WrR-ec-YuO"/>
@@ -30,7 +30,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXW-4O-lZd">
                         <rect key="frame" x="15" y="0.0" width="290" height="1"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="tTE-Hd-noK"/>
+                            <constraint firstAttribute="height" constant="0.5" id="tTE-Hd-noK"/>
                         </constraints>
                     </view>
                 </subviews>
