--- a/KJ/ViewControllers/ContactNameTableViewCell.xib
+++ b/KJ/ViewControllers/ContactNameTableViewCell.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,10 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="88.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Sp1-dO-gVa">
+                        <rect key="frame" x="65" y="0.0" width="167" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="I8F-2D-fke"/>
                         </constraints>
@@ -24,6 +28,7 @@
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHy-il-vT2">
+                        <rect key="frame" x="15" y="44.5" width="40" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="qSy-oy-R3P"/>
                             <constraint firstAttribute="height" constant="44" id="ycv-rr-ge3"/>
@@ -33,6 +38,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="upl-mi-T1e">
+                        <rect key="frame" x="15" y="0.0" width="40" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="1hj-9e-Rmc"/>
                             <constraint firstAttribute="width" constant="40" id="UVA-T6-gsI"/>
@@ -42,19 +48,22 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mhw-rW-XHg" userLabel="lineH">
+                        <rect key="frame" x="15" y="43.5" width="217" height="1"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="ZPx-0C-eTd"/>
+                            <constraint firstAttribute="height" constant="0.5" id="ZPx-0C-eTd"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kxz-uI-y4R" userLabel="lineV">
+                        <rect key="frame" x="231" y="0.0" width="1" height="89"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="89" id="1Oa-u2-SRR"/>
-                            <constraint firstAttribute="width" constant="1" id="uXB-bB-VCn"/>
+                            <constraint firstAttribute="width" constant="0.5" id="uXB-bB-VCn"/>
                         </constraints>
                     </view>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="SyL-zR-OTb">
+                        <rect key="frame" x="65" y="44.5" width="167" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="tgs-U3-7Ba"/>
                         </constraints>
@@ -63,6 +72,7 @@
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QW4-hu-gP6">
+                        <rect key="frame" x="262" y="28.5" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="32" id="DOO-YQ-q3e"/>
                             <constraint firstAttribute="width" constant="32" id="sey-Es-340"/>
