--- a/KJ/ViewControllers/MedicalVisitTableViewCell.xib
+++ b/KJ/ViewControllers/MedicalVisitTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Yb-f8-20w">
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVv-DV-gpk">
-                        <rect key="frame" x="15" y="34" width="38" height="16"/>
+                        <rect key="frame" x="15" y="34" width="290" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="Cma-lj-EpA"/>
                         </constraints>
@@ -49,7 +49,7 @@
                         <rect key="frame" x="15" y="0.0" width="290" height="1"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="2Pd-Dh-Xpq"/>
+                            <constraint firstAttribute="height" constant="0.5" id="2Pd-Dh-Xpq"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -65,6 +65,7 @@
                     <constraint firstItem="hVv-DV-gpk" firstAttribute="top" secondItem="9Yb-f8-20w" secondAttribute="bottom" constant="8" id="Tby-ty-sCS"/>
                     <constraint firstItem="eck-7W-ae2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="c8I-I0-z5f"/>
                     <constraint firstItem="hVv-DV-gpk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="grv-bE-ZCd"/>
+                    <constraint firstAttribute="trailing" secondItem="hVv-DV-gpk" secondAttribute="trailing" constant="15" id="hEL-7x-M02"/>
                     <constraint firstAttribute="trailing" secondItem="eck-7W-ae2" secondAttribute="trailing" constant="15" id="yEX-bC-wsp"/>
                 </constraints>
             </tableViewCellContentView>
